--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -1,16 +1,32 @@
 server:
-  port: 8081
+  port: 8001
 spring:
   application:
-    name: cloud-payment-service
+    name: cloud-provider-payment
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://106.52.131.86:3306/db2019?userUnicode=true&characterEncoding=utf-8&useSSL=false
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://124.70.160.105:3306/cloud2020?userUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: root
 
 
 mybatis:
-#  mapper-locations: classpath:mapper/*.xml
+  mapper-locations: classpath:dao/*.xml
   type-aliases-package: com.atguigu.springcloud.entities. #所有Entity别名类所在包
+
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:7001/eureka
+#      defaultZone: http://eureka7002.com:7002/eureka/,http://eureka7001.com:7001/eureka/
+    register-with-eureka: true
+    fetchRegistry: true
+  instance:
+    instance-id: payment8001
+    prefer-ip-address: true
+    #Eureka客户端向服务端发送心跳的时间间隔，单位秒（默认是30秒）
+    lease-renewal-interval-in-seconds: 1
+    #Eureka服务端在收到最后一次心跳后等待时间上限，单位秒（默认是90秒），超时将删除服务
+    lease-expiration-duration-in-seconds: 2
