--- a/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud-eureka-server7001/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 7001
 eureka:
   instance:
-    hostname: eureka7001.com #eureka服务端的实例名称
+    hostname: localhost #eureka服务端的实例名称
   client:
     #false表示不向注册中心注册自己
     register-with-eureka: false
@@ -13,7 +13,7 @@ eureka:
       #集群模式
 #      defaultZone: http://eureka7002.com:7002/eureka/
       #单机模式就是自己
-      defaultZone: http://eureka7001.com:7001/eureka/
+      defaultZone: http://localhost:7001/eureka/
   server:
     #关闭自我保护机制，保证不可用服务被即使删除
     enable-self-preservation: false
