--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -19,7 +19,7 @@ mybatis:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:7001/eureka
+      defaultZone: http://eureka7001.com:7001/eureka
 #      defaultZone: http://eureka7002.com:7002/eureka/,http://eureka7001.com:7001/eureka/
     register-with-eureka: true
     fetchRegistry: true
